fix cumulative layout shift on desktop screen

--- a/src/modules/ElephantomDetails/ElephantDetails.module.css
+++ b/src/modules/ElephantomDetails/ElephantDetails.module.css
@@ -33,4 +33,5 @@
 
 .elephantImage {
   max-width: 100%;
+  height: 500px;
 }
